Fix account menu long text wrapping

--- a/ui/components/app/account-menu/index.scss
+++ b/ui/components/app/account-menu/index.scss
@@ -58,6 +58,7 @@
 
     &__text {
       @include Paragraph;
+      letter-spacing: -0.015rem;
     }
 
     &__subtext {
